<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:text="Back"
        android:textColor="?attr/colorPrimary"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:id="@+id/backBtn"
        android:fontFamily="@font/roboto" />

    <ImageView
        android:id="@+id/signUpImage"
        android:layout_width="match_parent"
        android:layout_height="361dp"
        android:layout_below="@id/backBtn"
        android:layout_marginTop="-40dp"
        android:src="@drawable/sign_in_image" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpImage"
        android:layout_marginTop="-70dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito"
        android:gravity="left"
        android:paddingLeft="20dp"
        android:text="Sign Up"
        android:textColor="?attr/colorSecondary"
        android:textSize="36dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext"
        android:hint="Name"
        android:inputType="text"
        android:padding="12dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="?attr/colorSecondary"
        android:fontFamily="@font/roboto"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:cornerRadius="10dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm_password"
        android:layout_alignTop="@+id/signUpImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="661dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="-113dp" />

</RelativeLayout>